<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/productiveappbg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Timer Display -->
    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/_00_00_00"
        android:textColor="@android:color/black"
        android:textSize="48sp" />

    <!-- Start Button -->
    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/aqua"
        android:text="@string/start"
        android:textColor="#000000" />

    <!-- Pause Button -->
    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#5FE8FA"
        android:text="@string/pause"
        android:textColor="#000000" />

    <!-- Reset Button -->
    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#4FE2F4"
        android:text="@string/reset"
        android:textColor="#000000" />
</LinearLayout>